--- a/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
@@ -37,7 +37,7 @@
                                                 {
                                                     @address[i].AddressLine2<br />
                                                 }
-                                                @if (!string.IsNullOrEmpty(address[i].PostCode) || !string.IsNullOrEmpty(address[i].PostCode))
+                                                @if (!string.IsNullOrEmpty(address[i].AddressLine3) || !string.IsNullOrEmpty(address[i].PostCode))
                                                 {
                                                     @address[i].AddressLine3 @address[i].PostCode<br />
                                                 }
@@ -47,7 +47,6 @@
                                                 }
                                                 @if (!string.IsNullOrEmpty(address[i].Telephone))
                                                 {
-
                                                     <b>Phone:</b> @address[i].Telephone<br />
                                                 }
 
@@ -216,7 +215,29 @@
                         </div>
                     </div>
                 }
-                @if (ViewBag.ShippmentMethodType != null)
+                @if (ViewBag.ShippmentMethodType == 1 && ViewBag.CollectionPointId == null)
+                {
+                    <div class="content-wrapper select">
+                        @Html.Hidden("collectionPointId", (int?)ViewBag.CollectionPointId)
+                        <h2 class="text-uppercase">Select Collection Point</h2>
+                        <hr class="custom-hr">
+                        <div class="search-container row">
+                            <div class="search-box input-group col-md-6 col-12 ">
+                                <input id="collection-postCode" type="text" name="search" value="" placeholder="Enter PostCode" class="text-target-postcode form-control text-uppercase" />
+                                <div id="sp-btn-search" class="input-group-btn">
+                                    <button type="button" id="btn-search-category" class="btn btn-search-category" onclick="findNearCollectionPoints();">Show Collection Points</button>
+                                </div>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="collection-points"></div>
+                        <br />
+                        <div>
+                            <a href="javascript:;" role="button" class="btn btn-primary select-shipping-method-btn" style="font-size:11px" onclick="ChooseCollectionPoint(@ViewBag.AccountIds,@ViewBag.BillingAddressId,@ViewBag.ShipingAddressId,@ViewBag.ShippmentMethodType,@(ViewBag.Shiping==true?"true":"false"))">Select shipping method</a>
+                        </div>
+                    </div>
+                }
+                @if (ViewBag.ShippmentMethodType == 2 || (ViewBag.ShippmentMethodType == 1 && ViewBag.CollectionPointId != null))
                 {
                     <div class="content-wrapper select">
                         <h2 class="text-uppercase">Select Payment Method</h2>
@@ -236,7 +257,7 @@
                             </div>
                         </div>
                         <div class="">
-                            <a href="javascript:;" role="button" class="btn btn-primary select-payment-method-btn" style="font-size:11px" onclick="ChoosePaymentMethod(@ViewBag.AccountIds,@ViewBag.ShipingAddressId,@ViewBag.ShippmentMethodType)">Select payment method</a>
+                            <a href="javascript:;" role="button" class="btn btn-primary select-payment-method-btn" style="font-size:11px" onclick="ChoosePaymentMethod(@ViewBag.AccountIds,@ViewBag.ShipingAddressId,@ViewBag.ShippmentMethodType,@ViewBag.CollectionPointId)">Select payment method</a>
                         </div>
                     </div>
                 }
